fix: merge classes option